# priorproof

./: .gitignore  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml
configs/: default.json  neural_encoder.example.json  snapshot_commits.example.json  topology_canonical_cases.json  topology_scope.json
docs/: data_schema.md  encoder.md  extraction.md
release/study_packet/: MANIFEST.json  README.md  rater_ui.html  study_packet_blinded.json
src/priorproof/: __init__.py  scope.py
src/priorproof/cli/: __init__.py  ablate.py  apply_scope.py  build_contrastive_data.py  build_corpus.py  check_encoder_stability.py  check_redundancy_fixture.py  counterfactual_priors.py  encoder_args.py  evaluate_llm_baseline.py  extract_declarations.py  fit_prior.py  gate_checks.py  generate_proof_narratives.py  make_canonical_cases.py  make_rater_packet.py  make_rater_ui.py  make_snapshot_manifest.py  make_study_packet.py  proof_term_extract.py  run_llm_baseline.py  score_novelty.py  source_scan_extract.py  train_encoder.py  train_neural_encoder.py  validate.py
src/priorproof/corpus/: __init__.py  pipeline.py  snapshots.py
src/priorproof/evaluation/: __init__.py  llm_baseline.py  packets.py  reports.py
src/priorproof/extraction/: __init__.py  proof_term.py  snapshots.py  source_scan.py
src/priorproof/metric/: __init__.py  families.py  filtering.py  frontier.py  redundancy.py  scoring.py
src/priorproof/modeling/: __init__.py  contrastive.py  encoder.py  neural_encoder.py  prior.py  retriever.py  text.py
tests/: test_encoder_prior_validation.py  test_extraction.py  test_metric_core.py
tests/fixtures/: rederive_redundancy.jsonl
tools/: analyze_study_results.py  make_release.py
