[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "priorproof"
version = "0.1.0"
description = "Point-in-time novelty scoring for formal proof dependency footprints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
ml = [
  "sentence-transformers>=3.0",
  "torch>=2.2",
  "datasets>=2.19",
  "accelerate>=1.1",
]

[project.scripts]
priorproof-build-corpus = "priorproof.cli.build_corpus:main"
priorproof-make-snapshot-manifest = "priorproof.cli.make_snapshot_manifest:main"
priorproof-extract-declarations = "priorproof.cli.extract_declarations:main"
priorproof-proof-term-extract = "priorproof.cli.proof_term_extract:main"
priorproof-source-scan-extract = "priorproof.cli.source_scan_extract:main"
priorproof-gate-checks = "priorproof.cli.gate_checks:main"
priorproof-check-redundancy-fixture = "priorproof.cli.check_redundancy_fixture:main"
priorproof-score = "priorproof.cli.score_novelty:main"
priorproof-build-contrastive-data = "priorproof.cli.build_contrastive_data:main"
priorproof-train-neural-encoder = "priorproof.cli.train_neural_encoder:main"
priorproof-check-encoder-stability = "priorproof.cli.check_encoder_stability:main"
priorproof-fit-prior = "priorproof.cli.fit_prior:main"
priorproof-validate = "priorproof.cli.validate:main"
priorproof-ablate = "priorproof.cli.ablate:main"
priorproof-counterfactual-priors = "priorproof.cli.counterfactual_priors:main"
priorproof-rater-packet = "priorproof.cli.make_rater_packet:main"

[tool.setuptools.packages.find]
where = ["src"]
